# bearcreek-cinema

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INVENTORY.md  LICENSE  README.md  SECURITY.md  SESSION.md  config.example.toml  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  proposal.md
.github/workflows/: ci.yml
claude-code-pack/: CLAUDE.md  CONTRACTS.md  DECISIONS.md  ENVIRONMENT.md  GUARDRAILS.md  TESTING.md
claude-code-pack/TASKS/: README.md  phase1-01-scaffold.md  phase1-02-config.md  phase1-03-state-schema.md  phase1-04-jellyfin-client.md  phase1-05-ollama-smoke.md  phase1-06-logging-observability.md  phase1-07-ollama-stack.md  phase2-01-archive-discovery.md  phase2-02-tmdb-enrichment.md  phase2-03-tv-grouping.md  phase2-04-ia-get-downloader.md  phase2-05-librarian-core.md  phase2-06-librarian-placement.md  phase2-07-librarian-eviction.md  phase2-08-librarian-tv-sampler.md  phase2-09-jellyfin-placement.md  phase3-01-show-state-aggregator.md  phase3-02-tfidf-prefilter.md  phase3-03-ollama-rank.md  phase3-04-profile-bootstrap.md  phase3-05-profile-update.md  phase3-06-tfidf-provider.md  phase3-07-claude-rank.md  phase3-08-recommend-command.md  phase3-09-fts5-indexing.md  phase4-01-fastapi-scaffold.md  phase4-02-health-endpoint.md  phase4-03-recommendations-endpoints.md  phase4-04-select-flow.md  phase4-05-search-endpoint.md  phase4-06-poster-proxy.md  phase4-07-disk-endpoint.md  phase4-08-query-router.md  phase5-01-roku-scaffold.md  phase5-02-roku-settings.md  phase5-03-roku-home-grid.md  phase5-04-roku-detail-movie.md  phase5-05-roku-detail-show.md  phase5-06-roku-episode-browser.md  (+3 more)
claude-code-pack/fixtures/: sample_archive_search.json  sample_jellyfin_history.json  sample_ollama_rank_response.json  sample_taste_profile.json
claude-code-pack/scripts/: bootstrap-dev.sh
docker/: Dockerfile  ollama.compose.yml
docs/: ARCHITECTURE.md  case-study.md  curator.md  design-principles.md  search-and-retrieval.md
portfolio/: consulting-pitch.md  cv-bullets.md
roku/bear-creek-cinema/: README.md
tests/: conftest.py
(+174 files in other folders)
