[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "archive-agent"
version = "0.1.0"
description = "Bear Creek Cinema — Archive.org → Jellyfin recommendation agent."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Rob Ross" }]

dependencies = [
    "pydantic>=2.9",
    "httpx>=0.27",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "structlog>=24.4",
    "typer>=0.12",
    "instructor>=1.6",
    "ollama>=0.4",
    "anthropic>=0.40",
    "internetarchive>=3.7",
    "scikit-learn>=1.5",
    "numpy>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "mypy>=1.13",
    "ruff>=0.8",
    "pre-commit>=4.0",
]

[project.scripts]
archive-agent = "archive_agent.__main__:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = [
    "internetarchive.*",
    "sklearn.*",
    "instructor.*",
    "ollama.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",     # pycodestyle / pyflakes
    "I",               # isort
    "N",               # pep8-naming
    "UP",              # pyupgrade
    "B",               # flake8-bugbear
    "SIM",             # flake8-simplify
    "RUF",             # ruff-specific
]
ignore = [
    "E501",            # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802"]  # test function naming

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: requires live network/services (RUN_INTEGRATION_TESTS=1)",
    "e2e: end-to-end, manual runs only",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:pydantic.*",
]
